Fix: unneeded scrollbars

--- a/src/backdrops/CreateResponse/create-response.scss
+++ b/src/backdrops/CreateResponse/create-response.scss
@@ -29,7 +29,7 @@
 
   & .backdrop__children {
     flex: 0.9;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   & .backdrop__buttons-container {
